Finishing chapter about comprehensions

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -3004,7 +3004,9 @@
     "\n",
     "```python\n",
     "\n",
-    "tuple((f(x) for x in numbers))"
+    "tuple((f(x) for x in numbers))\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -3030,36 +3032,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 9 \n"
+     ]
+    }
+   ],
    "source": [
     "# O objetivo é ler as linhas de um arquivo, removendo espaços em\n",
     "# branco e desconsiderando linhas vazias ou que contenham somente\n",
     "# espaços.\n",
-    "\n"
+    "\n",
+    "trimmed_lines = list()\n",
+    "\n",
+    "for line in open(r'src/wombat-story.txt'):\n",
+    "    \n",
+    "    line = line.strip()\n",
+    "    \n",
+    "    if line != '':\n",
+    "        \n",
+    "        trimmed_lines.append(line)\n",
+    "        \n",
+    "print(f\"Got {len(trimmed_lines)} \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__COMENTÁRIO PESSOAL:__\n",
+    "\n",
+    "o método `.strip()` remove espaços em branco no inicio e final da string. Tem como default um parâmetro None com isso remove espaços, se ao invés de None for passado uma cadeia de caracteres, estes caracteres serão removidos do inicio e fim da string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sendo bem direto, o que estamos construindo é uma lista chamada `trimmed_lines`. A lista resultante, tem os espaços em branco iniciais e finais removidos de cada linha, e ignora linhas varias ou compostas somente por espaços. Não é difícil imaginar a necessidade de fazer algo do tipo em um programa real. \n",
+    "\n",
+    "Agora, como poderiamos fazer isso utilizando uma `list comprehension`?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got 9 \n"
+     ]
+    }
+   ],
+   "source": [
+    "trimmed_lines = [\n",
+    "    line.strip()\n",
+    "    for line in open(r'src/wombat-story.txt')\n",
+    "    if line.strip() != ''\n",
+    "]\n",
+    "\n",
+    "print(f\"Got {len(trimmed_lines)} \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Isto funciona. Mas note que a instrução `line.strip()` aparece duas vezes. Isso faz com que CPU seja despesdiçado comparado com a versão com o loop `for` que executa este comando apenas uma vez. Remover espaços de uma string não é uma operação muito custosa, computacionalmente falando. Mas cedo ou tarde, você vai querer fazer algo onde essa duplicação importa:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "values = [\n",
+    "    expensive_function(n)\n",
+    "    for n in range(BIG_NUMBER)\n",
+    "    if expensive_function(n) > 0\n",
+    "]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Então, como criar neste caso, uma `list comprehension`, chamando a função `expensive_function` apenas uma vez? A notícia ruim é que não há uma maneira direta de fazer isso. Existem alguma soluções bem inteligentes para resolver isso, como por exemplo `memoizing` (o que pode facilmente consumir mais memória do que o preciso), definir uma `generator expression` (provavelmente a melhor escolha) ou fazer uma lista intermediária (se ela for pequena). Se a sequencia que você precisa, segue o padrão acima, você pode considerar construi-la da forma antiga com `for loops`, ou uilizar uma `generator function`. Ou se mesmo assim você ainda quiser utilizar uma `comprehension`, use uma `generator expression` no nível intermediário. O resultado é bem legível e tranquilo de entender (pelo menos pra você, que acompanhou o livro até agora).\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "intermediate_values = (\n",
+    "    expensive_function(n)\n",
+    "    for n in range(10000)\n",
+    ")\n",
+    "\n",
+    "\n",
+    "values = [\n",
+    "    intermediate_values\n",
+    "    for intermediate_value in intermediate_values\n",
+    "    if intermediate_value > 0\n",
+    "]\n",
+    "\n",
+    "```\n",
+    "\n",
+    "__COMENTÁRIO PESSOAL__\n",
+    "\n",
+    "Neste caso, através de uma `generator expression` intermediária, pudemos calcular a expressão computacionalmente custosa apenas uma vez.\n",
+    "\n",
+    "- Definição de __memoizing__: Pelo que pesquisei, memoizing é quando você faz um cálculo custoso e guarda as respostas em cache, quando o cálculo for necessário novamente, ao invés de fazer o cálculo novamente, o programa pega a resposta previamente calculada. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outra limitação, é que as `list comprehensions` são construidas um elemento de cada vez. A melhor forma de enxergar isso é imaginar uma lista composta por pares chave-valor em linha. Em outras palavras, os elementos chave ocorrem com seus valores logo em seguida. Imagine uma função para converter esta lista em um dicionário."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'orange': 0.7,\n",
+       " 'banana': 0.86,\n",
+       " 'cantaloupe': 0.63,\n",
+       " 'bok choy': 1.56,\n",
+       " 'coconuts': 1.06}"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# preço por kg de frutas e vegetais em dolar\n",
+    "\n",
+    "prices_flat_list = [\n",
+    "    'orange', 0.70,\n",
+    "    'banana', 0.86,\n",
+    "    'cantaloupe', 0.63,\n",
+    "    'bok choy', 1.56,\n",
+    "    'coconuts', 1.06\n",
+    "]\n",
+    "\n",
+    "def list2dict(flattened):\n",
+    "    \n",
+    "    assert len(flattened) % 2 == 0, \"Input must be list of key-value pairs\"\n",
+    "    \n",
+    "    unflattened = dict()\n",
+    "    \n",
+    "    for i in range(0, len(flattened), 2):\n",
+    "        \n",
+    "        key, value = flattened[i], flattened[i + 1]\n",
+    "        \n",
+    "        unflattened[key] = value\n",
+    "    \n",
+    "    return unflattened       \n",
+    "\n",
+    "list2dict(prices_flat_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Olhe para o loop na função `list2dict`. Ele percorre os índices pares, da lista passada (`flattened`) ao invés de acessar diretamente seu elementos. Isto permite que possamos referenciar dois elementos por vez (por cada iteração do loop). Mas isto acaba sendo algo que não pode ser expresso na semantica das `list comprehension`. Geralmente, uma `comprehension` opera olhando cada elemento de alguma sequencia fonte por vez; Ela não pode inspecionar elementos vizinhos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__COMENTÁRIO PESSOAL__\n",
+    "\n",
+    "Vou tentar fazer a implementação desde exemplo através de um `dict comprehension`"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'orange': 0.7,\n",
+       " 'banana': 0.86,\n",
+       " 'cantaloupe': 0.63,\n",
+       " 'bok choy': 1.56,\n",
+       " 'coconuts': 1.06}"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{\n",
+    "    prices_flat_list[i]: prices_flat_list[i + 1]\n",
+    "    for i in range(0, len(prices_flat_list), 2)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No caso aqui, eu consegui fazer um `dict comprehension` acessando através do índice, não acessando o elemento diretamente, talvez a limitição seja com relação a acessar o elemento diretamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outro exemplo: Uma função que agrupa os elementos de uma sequencia de acordo com algum critério - por exemplo, a primeira letra de uma string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def group_by_first_letter(items):\n",
+    "    \n",
+    "    grouped = defaultdict(list)\n",
+    "    \n",
+    "    for item in items:\n",
+    "        \n",
+    "        key = item[0].lower()\n",
+    "        grouped[key].append(item)\n",
+    "        \n",
+    "    return dict(grouped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__COMENTÁRIO PESSOAL__\n",
+    "\n",
+    "bem legal a utilização do `defaultdict` pelo que entendi é um dict que carrega valores default para qualquer chave que venha a ser inserida, no caso inicializo a chave com uma lista vazia. Vou fazer um teste rápido inicializando com zero pois daí posso fazer um esquema de montar um contador."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = 'rodrigo rodrigo rodrigo renata renata \\\n",
+    "         renata renata isabella \\\n",
+    "         isabella isabella gabi gabi gabi gabi gabi'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rodrigo': 3, 'renata': 4, 'isabella': 3, 'gabi': 5}"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def return_zero():\n",
+    "    \n",
+    "    return 0\n",
+    "\n",
+    "name_counter = defaultdict(return_zero)\n",
+    "\n",
+    "for name in names:\n",
+    "    \n",
+    "    name_counter[name] += 1\n",
+    "    \n",
+    "\n",
+    "name_counter = dict(name_counter)\n",
+    "name_counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Muito legal, funcionou o contador com o `defaultdict` lembrando que ele precisa receber um `callable`, um objeto que possa ser chamado (funções, objetos...). Com isso ao invés de passar o valor zero diretamente, criei uma função que simplesmente retorna zero. Com isso todas as chaves agora passaram a ser inicializadas com zero. Posso também fazer uma função anonima será que funciona? Vamos ver:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rodrigo': 3, 'renata': 4, 'isabella': 3, 'gabi': 5}"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_counter = defaultdict(lambda :0)\n",
+    "\n",
+    "for name in names:\n",
+    "    \n",
+    "    name_counter[name] += 1\n",
+    "    \n",
+    "\n",
+    "name_counter = dict(name_counter)\n",
+    "name_counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = 'Joe Jim Todd Tiffany Zelma Gerry Gina'.split()\n",
+    "\n",
+    "grouped_names = group_by_first_letter(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'j': ['Joe', 'Jim'],\n",
+       " 't': ['Todd', 'Tiffany'],\n",
+       " 'z': ['Zelma'],\n",
+       " 'g': ['Gerry', 'Gina']}"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Novamente, a semantica das `Python comprehensions` não foram feitas para suportar este tipo de algoritmo. Em termos de programação funcional, `comprehensions` pode usar operações de `map` e `filter`, mas não podem utilizar `reduce` ou `fold`. Felizmente, isto cobre a maioria dos casos. Apontei essas limitações para evitar que você gaste tempo tentando descobri-las.  "
+   ]
   },
   {
    "cell_type": "code",
