Starting chapter 3 - advanced function

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Chapter: Scaling with generators\n",
+    "## CAPITULO: SCALLING WITH GENERATOR\n",
     "\n",
     "Let's start with iterations, iteration is simply pass over each element in a sequence doing some operation on that. It's largelly used in for loops. But when a for loop is used, what happens under the hood? <br>\n",
     "So actually python uses a built-in function called `iter()` transforming a sequence into a `iterator`, what points to next element each iteration. <br> \n",
@@ -1392,7 +1392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CREATING COLLECTIONS WITH COMPREHENSIONS"
+    "# CAPITULO: CREATING COLLECTIONS WITH COMPREHENSIONS"
    ]
   },
   {
@@ -3277,6 +3277,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'j': ['Joe', 'Jim'],\n",
+       " 't': ['Todd', 'Tiffany'],\n",
+       " 'z': ['Zelma'],\n",
+       " 'g': ['Gerry', 'Gina']}"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = 'Joe Jim Todd Tiffany Zelma Gerry Gina'.split()\n",
+    "\n",
+    "grouped_names = group_by_first_letter(names)\n",
+    "\n",
+    "grouped_names"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3364,44 +3391,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 160,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "names = 'Joe Jim Todd Tiffany Zelma Gerry Gina'.split()\n",
-    "\n",
-    "grouped_names = group_by_first_letter(names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'j': ['Joe', 'Jim'],\n",
-       " 't': ['Todd', 'Tiffany'],\n",
-       " 'z': ['Zelma'],\n",
-       " 'g': ['Gerry', 'Gina']}"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped_names"
+    "Novamente, a semantica das `Python comprehensions` não foram feitas para suportar este tipo de algoritmo. Em termos de programação funcional, `comprehensions` pode usar operações de `map` e `filter`, mas não podem utilizar `reduce` ou `fold`. Felizmente, isto cobre a maioria dos casos. Apontei essas limitações para evitar que você gaste tempo tentando descobri-las. Apesar disso, acho que as `comprehensions` são uma parte valorosa da minha caixa de ferramentas python utilizada diariamente. E tenho certeza que vai ser para você também."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Novamente, a semantica das `Python comprehensions` não foram feitas para suportar este tipo de algoritmo. Em termos de programação funcional, `comprehensions` pode usar operações de `map` e `filter`, mas não podem utilizar `reduce` ou `fold`. Felizmente, isto cobre a maioria dos casos. Apontei essas limitações para evitar que você gaste tempo tentando descobri-las.  "
+    "# CAPITULO: FUNÇÕES AVANÇADAS"
    ]
   },
   {
@@ -3417,48 +3417,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def double_short_words(words):\n",
-    "    \n",
-    "    return [\n",
-    "        word + word\n",
-    "        for word in words\n",
-    "        if len(word) < 5\n",
-    "    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['olaola', 'oleole', 'ovoovo']\n"
-     ]
-    }
-   ],
-   "source": [
-    "words = 'ola ole ovo rodrigo bernardo medeiros'.split()\n",
-    "\n",
-    "double_small_words = double_short_words(words)\n",
-    "print(double_small_words)"
-   ]
   },
   {
    "cell_type": "code",
