inclusao da introdução do cápítulo 3

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -3394,7 +3394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Novamente, a semantica das `Python comprehensions` não foram feitas para suportar este tipo de algoritmo. Em termos de programação funcional, `comprehensions` pode usar operações de `map` e `filter`, mas não podem utilizar `reduce` ou `fold`. Felizmente, isto cobre a maioria dos casos. Apontei essas limitações para evitar que você gaste tempo tentando descobri-las. Apesar disso, acho que as `comprehensions` são uma parte valorosa da minha caixa de ferramentas python utilizada diariamente. E tenho certeza que vai ser para você também."
+    "Novamente, a semantica das `Python comprehensions` não foram feitas para suportar este tipo de algoritmo. Em termos de programação funcional, `comprehensions` pode usar operações de `map` e `filter`, mas não podem utilizar `reduce` ou `fold`. Felizmente, isto cobre a maioria dos casos. Apontei essas limitações para evitar que você não gaste tempo tentando descobri-las. Apesar disso, acho que as `comprehensions` são uma parte valorosa da minha caixa de ferramentas python utilizada diariamente. E tenho certeza que vai ser para você também."
    ]
   },
   {
@@ -3405,53 +3405,90 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Neste capítulo, vamos além do básico no uso de funções. Irei assumir que você pode definir e trabalhar com funções com argumentos default:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def foo(a, b, x=3, y=2):\n",
+    "    \n",
+    "    return (a + b) / (x + y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(5, 0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(10, 2, y=3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo(b=4, x=8, a=1)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Note a última forma que `foo` foi chamada: com argumentos fora de ordem, e tudo especificado por pares chave-valor. Nem todo mundo sabe que você pode chamar qualquer função em python desta forma. Enquanto os valores de cada argumento forem definidos de maneira não ambígua, python não se importa como você chama a função (neste caso, nós especificamos b,x e a fora de ordem mantendo o valor default de y). Vamos falar mais sobre essa flexibilidade mais tarde.\n",
+    "Os tópicos desde capítulo são úteis e valiosos. E serão muito importantes para padrões extremamente poderosos, que serão abordados nos próximos capítulos. "
+   ]
   },
   {
    "cell_type": "code",
@@ -3477,7 +3514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
