start learning about args

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -3487,8 +3487,363 @@
    "metadata": {},
    "source": [
     "Note a última forma que `foo` foi chamada: com argumentos fora de ordem, e tudo especificado por pares chave-valor. Nem todo mundo sabe que você pode chamar qualquer função em python desta forma. Enquanto os valores de cada argumento forem definidos de maneira não ambígua, python não se importa como você chama a função (neste caso, nós especificamos b,x e a fora de ordem mantendo o valor default de y). Vamos falar mais sobre essa flexibilidade mais tarde.\n",
-    "Os tópicos desde capítulo são úteis e valiosos. E serão muito importantes para padrões extremamente poderosos, que serão abordados nos próximos capítulos. "
+    "Os tópicos desde capítulo são úteis e valiosos. E serão muito importantes para padrões extremamente poderosos, que serão abordados nos próximos capítulos. Vamos começar!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aceitando e passando argumentos variáveis.\n",
+    "\n",
+    "A função `foo` acima, pode ser chamada com 2, 3 ou 4 argumentos. As vezes quer definir uma função que receba qualquer número de argumentos - zero ou mais, em outras palavras. Em python, é feito assim:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def takes_any_args(*args):\n",
+    "    \n",
+    "    \n",
+    "    print(f'type of args: {type(args)}')\n",
+    "    print(f'value if args: {str(args)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Olhe com calma a sintaxe aqui, `takes_any_argument` é como se fosse uma função regular, exceto que pusemos um * antes do argumento `args`. Dentro da função, `args` é uma tupla."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of args: <class 'tuple'>\n",
+      "value if args: ('x', 'y', 'z')\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_any_args('x', 'y', 'z')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of args: <class 'tuple'>\n",
+      "value if args: (1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_any_args(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of args: <class 'tuple'>\n",
+      "value if args: ()\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_any_args()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of args: <class 'tuple'>\n",
+      "value if args: (5, 4, 3, 2, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_any_args(5, 4, 3, 2, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of args: <class 'tuple'>\n",
+      "value if args: (['first', 'list'], ['another', 'list'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_any_args(['first', 'list'], ['another', 'list'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Se você chamar a função sem argumentos, `args` será uma tupla vazia. Senão, será uma tupla composta pelos argumentos passados, em ordem. Note que isto é diferente de declarar uma função que recebe um único argumento, que pode ser uma lista ou tuple."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def takes_a_list(items):\n",
+    "    \n",
+    "    print(f'type of items: {type(items)}')\n",
+    "    print(f'value of items: {str(items)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of items: <class 'list'>\n",
+      "value of items: ['x', 'y', 'z']\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_a_list(['x', 'y', 'z'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of args: <class 'tuple'>\n",
+      "value if args: (['x', 'y', 'z'],)\n"
+     ]
+    }
+   ],
+   "source": [
+    "takes_any_args(['x', 'y', 'z'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nessas chamadas, `takes_a_list` e `takes_any_args`, o argumento items é uma lista de strings. Nós estamos chamando ambas as funções da mesma forma, mas o que acontece em cada função é diferente. Dentro da `takes_any_args`, uma tupla chamada `args` tem um elemento - e o elemento é a lista `['x', 'y', 'z']`. Mas a `takes_a_list`, items é a própria lista."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta expressão `*args` nos dá um padrão de programação muito útil. Você pode trabalhar com argumentos como uma sequencia abstrata, enquanto provê uma interface mais natural para quem chama a função.\n",
+    "Acima, sempre chamamos o argumento de `args` na assinatura da função. Escrever `*args` é uma convenção bem estabelecida, mas podemos escolher nomes diferentes - o asterisco é o que faz a transformação em um argumento variável. Por exemplo, a função a seguir recebe muitos arquivos como argumento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_files(*paths):\n",
+    "    \n",
+    "    data = ''\n",
+    "    \n",
+    "    for path in paths:\n",
+    "        \n",
+    "        with open(path) as handle:\n",
+    "            \n",
+    "            data += handle.read()\n",
+    "            \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Muitos programadores python utilizam `*args` a menos que aja alguma razão para nomear de outra forma. Esta razão geralmente é legibilidade. `read_files` é um bom exemplo. Se nomear o argumento de outra forma que não `args` tornar o código mais legivel, faça isso!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
