Inclusao Including packing and un-packing examples in function calls

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -3706,144 +3706,150 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Desempacotamento de argumentos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O modificador estrela trabalha em outra direção também. Intrigantemente, podemos usá-lo com qualquer função. Por exemplo, suponha que uma biblioteca provenha esta função:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def order_book(title, author, isbn):\n",
+    "    \"\"\"\n",
+    "    Place an order for a book.\n",
+    "    \"\"\"\n",
+    "    print(f\"Ordering {title} by {author} ({isbn})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que não há asterisco. Suponha que em uma biblioteca, completamente diferente, você obtém as informações de um livro através da seguinte função:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_required_textbook(class_id):\n",
+    "    \"\"\"\n",
+    "    Returns a tuple (title, author, ISBN)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return \"Writing Great Code\", \"Randall Hyde\", 1593270038"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Novamente, sem asteríscos. Agora, uma forma de ligar essas duas funções, é armazenar a tuple resultante da `get_required_textbook`, e desempacotá-la elemento por elemento."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ordering Writing Great Code by Randall Hyde (1593270038)\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_info = get_required_textbook(4242)\n",
+    "\n",
+    "order_book(book_info[0], book_info[1], book_info[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escrever código assim é entediante e sujeita a erros; não é o ideal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Felizmente, Python dispõe uma maneira melhor. Vamos olhar uma função diferente:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def normal_function(a, b, c):\n",
+    "    \n",
+    "    print(f\"a: {a} b: {b} c: {c}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De novo, `normal_function` é somente uma função regular. Não utilizamos asterísco na linha de definição da função. Mas quando a chamamos, recebemos uma tuple chamada `numbers` e a passamos com um asterisco na frente. Ela é em seguida desempacotada dentro da função nos argumentos `a`, `b` e `c`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Existe uma dualidade aqui. Nós podemos utilizar o asterisco na definição da função ou chamando uma função. A sintaxe é muito parecida. Mas repare que elas estão fazendo duas coisas diferentes. Uma é empacotar os argumentos em uma tupla automaticamente - padrão chamado argumentos variáveis; a outra é desempacotamento - padrão chamado desempacotamento de argumentos. Esteja claro na distinção dos dois em sua mente.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Armados com o completo entendimento, nós podemos ligar as duas funções de uma maneira muito melhor."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ordering Writing Great Code by Randall Hyde (1593270038)\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_info = get_required_textbook(4242)\n",
+    "\n",
+    "order_book(*book_info)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Esta forma é mais concisa (menos tediosa de escrever), e mais sustentável. Conforme você se acostuma com esses conceitos, vai achar mais natural e fácil de usar no código que você escreve."
+   ]
   },
   {
    "cell_type": "code",
